<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:auto="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        auto:pv_listDivide="@color/gray"
        auto:pv_listDivideHeight="0.8dp"
        auto:pv_refreshMode="none" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_item_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_add" />

        <Button
            android:id="@+id/btn_item_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_remove" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random_add" />

        <Button
            android:id="@+id/btn_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random_remove" />
    </LinearLayout>


</FrameLayout>