<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:auto="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.ldzs.recyclerlibrary.PullToRefreshRecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        auto:pv_divideHorizontalPadding="@dimen/activity_margin"
        auto:pv_divideVerticalPadding="@dimen/activity_margin"
        auto:pv_listDivideHeight="0.4dp"
        auto:pv_refreshMode="none"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:gravity="right"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_add_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_item" />

        <Button
            android:id="@+id/btn_remove_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_item" />

        <Button
            android:id="@+id/btn_update_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_item" />

    </LinearLayout>
</FrameLayout>